2009-04-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* classic/Makefile.am:
	* configure.ac:
	- supported AX_XAW7 macro.
	- removed variables related to rcssbase.

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	* m4/ax_xaw7.m4:
	* m4/qt.m4:
	- replaced symbolic link with hard copy.
	- addec AX_XAW7 macro.

2009-03-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro:
	- updated a point version. Official release 13.1.1.

2009-03-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/rcgconvert.cpp:
	- fixed compiler warnings.

2009-03-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/disp_holder.cpp:
	* qt4/monitor_server.cpp:
	* qt4/team_graphic.cpp:
	* rcsslogplayer/parser.cpp:
	- applied a gcc-4.4 patch provided by Hedayat Vatankhah.

2008-12-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a minor version string. Official release 13.1.0.

2008-12-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/Makefile.am:
	* tool/rcgconvert.cpp:
	- removed rcg3to4 and rcg4to3 from a build target.
	- fixed the output destination of rcgconvert's help messages.

2008-12-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* classic/Makefile.am:
	* qt4/Makefile.am:
	* rcsslogplayer/Makefile.am:
	- fixed autoconf macros.
	- fixed compiler options.

2008-11-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/rcgconvert.cpp:
	* rcsslogplayer/types.cpp:
	* tool/Makefile.am:
	* tool/rcg3to4.cpp:
	* tool/rcg4to3.cpp:
	- implemented rcgconvert command, which can handle any rcg
	version.
	- fixed a parameter precision.

2008-12-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a version number string. Official release 13.0.1.

	* classic/controler.cpp:
	* classic/logplayer.cpp:
	* rcsslogplayer/gzfstream.cpp:
	* rcsslogplayer/parser.cpp:
	* tool/rcgsplit.cpp:
	- removed std:: from snprintf and strtof.
